--- a/client/style/index.css
+++ b/client/style/index.css
@@ -20,6 +20,7 @@
 
 body {
     background-color: #1E2529;
+    height: 100vh;
     margin: 0;
 }
 
